--- a/client/app/styles/variables/_variables.scss
+++ b/client/app/styles/variables/_variables.scss
@@ -26,6 +26,7 @@ $navbar-default-dropdown-divider-bg: #ecf0f1 !default;
 //collapsed (small devices)
 $navbar-default-collapsed-line-height: 40px !default;
 $navbar-default-collapsed-link-font-size: $base-font-size-ms !default;
+$navbar-default-collapsed-link-font-weight: $base-font-weight-light !default;
 $navbar-default-collapsed-expand-icon: "\f196" !default;
 $navbar-default-collapsed-expand-icon-color: #ecf0f1 !default;
 $navbar-default-collapsed-bg-color: #2d3e50 !default;
